--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,6 @@
     <link rel="stylesheet" href="../dist/output.css" />
   </head>
   <body>
-    <h1 class="text-bold text-2xl text-blue-500 underline">Hola mundo</h1>
+    <h1 class="text-2xl font-bold text-blue-500 underline">Hola mundo</h1>
   </body>
 </html>
