--- a/src/index.html
+++ b/src/index.html
@@ -8,5 +8,11 @@
   </head>
   <body>
     <h1 class="text-2xl font-bold text-blue-500 underline">Hola mundo</h1>
+
+    <a
+      class="text-blue-500 underline hover:text-blue-800"
+      href="./01-pseudo-classes/01-listas.html"
+      >Listas HTML</a
+    >
   </body>
 </html>
