--- a/src/index.html
+++ b/src/index.html
@@ -7,10 +7,10 @@
     <link rel="stylesheet" href="../dist/output.css" />
   </head>
   <body>
-    <h1 class="text-2xl font-bold text-blue-500 underline">Hola mundo</h1>
+    <h1 class="font-bod text-2xl text-blue-500 underline">Hola mundo</h1>
 
     <a
-      class="text-blue-500 underline hover:text-blue-800"
+      class="text-green-500 underline hover:text-blue-800"
       href="./01-pseudo-classes/01-listas.html"
       >Listas HTML</a
     >
