--- a/src/01-pseudo-classes/02-tablas.html
+++ b/src/01-pseudo-classes/02-tablas.html
@@ -11,86 +11,108 @@
     <h1>Tablas</h1>
     <hr />
 
-    <table>
-      <thead>
-        <tr>
-          <th>Foto</th>
-          <th>Nombre</th>
-          <th>Edad</th>
-          <th>Email</th>
-        </tr>
-      </thead>
-      <tbody>
-        <!--  -->
-        <tr>
-          <td>
-            <img
-              src="https://randomuser.me/api/portraits/men/1.jpg"
-              alt="Foto de Juan Pérez"
-            />
-          </td>
-          <td>Juan Pérez</td>
-          <td>28</td>
-          <td>juan.perez@email.com</td>
-        </tr>
-        <tr>
-          <td>
-            <img
-              src="https://randomuser.me/api/portraits/women/2.jpg"
-              alt="Foto de Maria Gomez"
-            />
-          </td>
-          <td>Maria Gomez</td>
-          <td>34</td>
-          <td>maria.gomez@email.com</td>
-        </tr>
-        <tr>
-          <td>
-            <img
-              src="https://randomuser.me/api/portraits/men/3.jpg"
-              alt="Foto de Luis Fernández"
-            />
-          </td>
-          <td>Luis Fernández</td>
-          <td>25</td>
-          <td>luis.fernandez@email.com</td>
-        </tr>
-        <tr>
-          <td>
-            <img
-              src="https://randomuser.me/api/portraits/women/4.jpg"
-              alt="Foto de Ana Ruiz"
-            />
-          </td>
-          <td>Ana Ruiz</td>
-          <td>30</td>
-          <td>ana.ruiz@email.com</td>
-        </tr>
-        <tr>
-          <td>
-            <img
-              src="https://randomuser.me/api/portraits/men/5.jpg"
-              alt="Foto de Carlos Torres"
-            />
-          </td>
-          <td>Carlos Torres</td>
-          <td>41</td>
-          <td>carlos.torres@email.com</td>
-        </tr>
-        <tr>
-          <td>
-            <img
-              src="https://randomuser.me/api/portraits/women/6.jpg"
-              alt="Foto de Laura Sánchez"
-            />
-          </td>
-          <td>Laura Sánchez</td>
-          <td>22</td>
-          <td>laura.sanchez@email.com</td>
-        </tr>
-      </tbody>
-    </table>
+    <div class="overflow-x-auto">
+      <table class="w-full min-w-max">
+        <thead class="hidden bg-gray-900/35 md:table-header-group">
+          <tr>
+            <th class="p-3">Foto</th>
+            <th class="p-3">Nombre</th>
+            <th class="p-3">Edad</th>
+            <th class="p-3 text-right">Email</th>
+          </tr>
+        </thead>
+        <tbody>
+          <!--  -->
+          <tr
+            class="mb-5 flex flex-col items-center justify-center p-2 odd:bg-white even:bg-gray-50 md:table-row dark:odd:bg-gray-900/50 dark:even:bg-gray-950"
+          >
+            <td>
+              <img
+                class="h-12 w-12 rounded-full"
+                src="https://randomuser.me/api/portraits/men/1.jpg"
+                alt="Foto de Juan Pérez"
+              />
+            </td>
+            <td>Juan Pérez</td>
+            <td>28</td>
+            <td>juan.perez@email.com</td>
+          </tr>
+          <tr
+            class="mb-5 flex flex-col items-center justify-center p-2 odd:bg-white even:bg-gray-50 md:table-row dark:odd:bg-gray-900/50 dark:even:bg-gray-950"
+          >
+            <td>
+              <img
+                class="h-12 w-12 rounded-full"
+                src="https://randomuser.me/api/portraits/women/2.jpg"
+                alt="Foto de Maria Gomez"
+              />
+            </td>
+            <td>Maria Gomez</td>
+            <td>34</td>
+            <td>maria.gomez@email.com</td>
+          </tr>
+          <tr
+            class="mb-5 flex flex-col items-center justify-center p-2 odd:bg-white even:bg-gray-50 md:table-row dark:odd:bg-gray-900/50 dark:even:bg-gray-950"
+          >
+            <td>
+              <img
+                class="h-12 w-12 rounded-full"
+                src="https://randomuser.me/api/portraits/men/3.jpg"
+                alt="Foto de Luis Fernández"
+              />
+            </td>
+            <td>Luis Fernández</td>
+            <td>25</td>
+            <td>luis.fernandez@email.com</td>
+          </tr>
+          <tr
+            class="mb-5 flex flex-col items-center justify-center p-2 odd:bg-white even:bg-gray-50 md:table-row dark:odd:bg-gray-900/50 dark:even:bg-gray-950"
+          >
+            <td>
+              <img
+                class="h-12 w-12 rounded-full"
+                src="https://randomuser.me/api/portraits/women/4.jpg"
+                alt="Foto de Ana Ruiz"
+              />
+            </td>
+            <td>Ana Ruiz</td>
+            <td>30</td>
+            <td>ana.ruiz@email.com</td>
+          </tr>
+          <tr
+            class="mb-5 flex flex-col items-center justify-center p-2 odd:bg-white even:bg-gray-50 md:table-row dark:odd:bg-gray-900/50 dark:even:bg-gray-950"
+          >
+            <td>
+              <img
+                class="h-12 w-12 rounded-full"
+                src="https://randomuser.me/api/portraits/men/5.jpg"
+                alt="Foto de Carlos Torres"
+              />
+            </td>
+            <td>Carlos Torres</td>
+            <td>41</td>
+            <td>carlos.torres@email.com</td>
+          </tr>
+          <tr
+            class="mb-5 flex flex-col items-center justify-center p-2 odd:bg-white even:bg-gray-50 md:table-row dark:odd:bg-gray-900/50 dark:even:bg-gray-950"
+          >
+            <td>
+              <img
+                class="h-12 w-12 rounded-full"
+                src="https://randomuser.me/api/portraits/women/6.jpg"
+                alt="Foto de Laura Sánchez"
+              />
+            </td>
+            <td>Laura Sánchez</td>
+            <td>22</td>
+            <td>laura.sanchez@email.com</td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
 
-    <a href="03-formularios.html">Siguiente Formularios</a>
+    <a href="03-formularios.html" class="text-blue-500 hover:text-blue-900"
+      >Siguiente Formularios</a
+    >
   </body>
 </html>
