fix: enhance peer class usage for radio inputs in 09-diferenciando-peers.html

--- a/src/01-pseudo-classes/09-diferenciando-peers.html
+++ b/src/01-pseudo-classes/09-diferenciando-peers.html
@@ -17,19 +17,19 @@
       <legend>Published status</legend>
 
       <!-- Los inputs deben estar ANTES y ser HERMANOS de los elementos que reaccionan -->
-      <input id="draft" type="radio" name="status" checked />
+      <input class="peer/draft" id="draft" type="radio" name="status" checked />
       <label for="draft" class="mr-6 cursor-pointer font-medium">Draft</label>
 
-      <input id="published" type="radio" name="status" />
+      <input id="published" class="peer/published" type="radio" name="status" />
       <label for="published" class="cursor-pointer font-medium"
         >Published</label
       >
 
       <!-- Estos divs son hermanos de los inputs -->
-      <div class="mt-4 hidden text-gray-300">
+      <div class="mt-4 hidden text-gray-300 peer-checked/draft:block">
         Drafts are only visible to administrators.
       </div>
-      <div class="mt-4 hidden text-gray-300">
+      <div class="mt-4 hidden text-gray-300 peer-checked/published:block">
         Your post will be publicly visible on your site.
       </div>
     </fieldset>
