--- a/src/01-pseudo-classes/09-diferenciando-peers.html
+++ b/src/01-pseudo-classes/09-diferenciando-peers.html
@@ -33,5 +33,11 @@
         Your post will be publicly visible on your site.
       </div>
     </fieldset>
+
+    <a
+      href="../02-temas/01-responsivo.html"
+      class="text-blue-500 hover:underline"
+      >Ir a diseño responsivo</a
+    >
   </body>
 </html>
