--- a/src/02-temas/01-responsivo.html
+++ b/src/02-temas/01-responsivo.html
@@ -11,8 +11,12 @@
     <h1 class="text-3xl font-bold">Diseño responsivo con Tailwind</h1>
 
     <!-- Ejemplo de Grid responsivo en TailwindCSS -->
-    <div class="mt-10 grid grid-cols-1 gap-6">
-      <div class="rounded-lg bg-slate-700 p-6 text-white shadow-lg">
+    <div
+      class="mt-10 grid grid-cols-1 gap-6 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 xl:grid-cols-5 2xl:grid-cols-6"
+    >
+      <div
+        class="rounded-lg bg-slate-700 p-6 text-white shadow-lg sm:bg-purple-500 md:bg-blue-500 lg:bg-green-500 xl:bg-yellow-500 2xl:bg-red-500"
+      >
         <h2 class="mb-2 text-xl font-semibold">Card 1</h2>
         <p>
           Este es un ejemplo de una tarjeta en un grid responsivo. En pantallas
