fix: enhance dark mode support in 02-dark.html and styles.css

--- a/src/02-temas/02-dark.html
+++ b/src/02-temas/02-dark.html
@@ -13,7 +13,7 @@
     <div class="mt-10 flex gap-8">
       <!-- Tarjeta Modo Light -->
       <div
-        class="flex-1 rounded-lg border border-slate-200 bg-white p-6 text-slate-900 shadow-lg transition-colors"
+        class="flex-1 rounded-lg border border-slate-200 bg-white p-6 text-slate-900 shadow-lg transition-colors dark:border-slate-700 dark:bg-slate-800"
       >
         <div class="mb-4 flex items-center">
           <svg
@@ -41,9 +41,11 @@
               <line x1="18.36" y1="5.64" x2="19.78" y2="4.22" />
             </g>
           </svg>
-          <h2 class="text-xl font-semibold text-slate-900">Modo Light</h2>
+          <h2 class="text-xl font-semibold text-slate-900 dark:text-white">
+            Modo Light
+          </h2>
         </div>
-        <p class="text-slate-700">
+        <p class="text-slate-700 dark:text-white/80">
           Este es un ejemplo de tarjeta en modo
           <span class="font-bold">claro (light)</span>. El fondo es claro y el
           texto oscuro. El icono representa el sol.
@@ -52,7 +54,7 @@
 
       <!-- Tarjeta Modo Dark -->
       <div
-        class="flex-1 rounded-lg border border-slate-700 bg-slate-800 p-6 text-white shadow-lg transition-colors"
+        class="flex-1 rounded-lg border border-slate-700 bg-slate-800 p-6 text-white shadow-lg transition-colors dark:border-slate-200 dark:bg-white"
       >
         <div class="mb-4 flex items-center">
           <svg
@@ -68,9 +70,11 @@
               stroke="currentColor"
             />
           </svg>
-          <h2 class="text-xl font-semibold text-white">Modo Dark</h2>
+          <h2 class="text-xl font-semibold text-white dark:text-slate-900">
+            Modo Dark
+          </h2>
         </div>
-        <p class="text-slate-300">
+        <p class="text-slate-300 dark:text-slate-950">
           Este es un ejemplo de tarjeta en modo
           <span class="font-bold">oscuro (dark)</span>. El fondo es oscuro y el
           texto claro. El icono representa la luna.
@@ -80,8 +84,8 @@
 
     <h1 class="my-5 text-xl font-bold">
       Actualmente:
-      <span>Tema Light</span>
-      <span>Tema Dark</span>
+      <span class="block dark:hidden">Tema Light</span>
+      <span class="hidden dark:block">Tema Dark</span>
     </h1>
 
     <button
@@ -96,8 +100,20 @@
     >
 
     <script>
-      // Todo: Agregar botón para cambiar tema aquí:
-      // Docs: https://tailwindcss.com/docs/dark-mode#toggling-dark-mode-manually
+      document.documentElement.classList.toggle(
+        "dark",
+        localStorage.theme === "dark" ||
+          (!("theme" in localStorage) &&
+            window.matchMedia("(prefers-color-scheme: dark)").matches),
+      );
+
+      document.querySelector("#theme-toggle").addEventListener("click", () => {
+        document.documentElement.classList.toggle("dark");
+
+        localStorage.theme = document.documentElement.classList.contains("dark")
+          ? "dark"
+          : "light";
+      });
     </script>
   </body>
 </html>
