--- a/src/02-temas/04-fuente.html
+++ b/src/02-temas/04-fuente.html
@@ -11,10 +11,18 @@
     <h1 class="text-3xl font-bold">Fuentes</h1>
     <hr />
     <div class="mt-2">
-      <p class="font-thin">Font Montserrat Alternates Thin</p>
-      <p class="font-light">Font Montserrat Alternates Light</p>
-      <p class="font-normal">Font Montserrat Alternates Regular</p>
-      <p class="font-bold">Font Montserrat Alternates Bold</p>
+      <p class="font-montserrat-alternates font-thin">
+        Font Montserrat Alternates Thin
+      </p>
+      <p class="font-montserrat-alternates font-light">
+        Font Montserrat Alternates Light
+      </p>
+      <p class="font-montserrat-alternates font-normal">
+        Font Montserrat Alternates Regular
+      </p>
+      <p class="font-montserrat-alternates font-bold">
+        Font Montserrat Alternates Bold
+      </p>
     </div>
   </body>
 </html>
